# Aurl.ai

./: .gitignore  .pre-commit-config.yaml  GAMEPLAN.md  PROJECT_STRUCTURE.md  README.md  analyze_chords_demo.py  chord_analysis_results_example.md  generate.py  pyproject.toml  requirements.txt  setup.py  train.py  train_enhanced.py  train_pipeline.py  training_state.json  view_progress.py  watch_progress.py
archive/: train.py.old
configs/: default.yaml  env_dev.yaml  env_prod.yaml  env_test.yaml
configs/data_configs/: aggressive_augmentation.yaml  minimal_augmentation.yaml
configs/generation_configs/: high_notes.yaml  jazzy.yaml  production.yaml
configs/model_configs/: transformer_only.yaml  vae_only.yaml
configs/training_configs/: dissolvable_grammar.yaml  grammar_enhanced.yaml  high_quality.yaml  quick_test.yaml  speed_test.yaml  stage1_base.yaml  stage1_transformer.yaml  stage2_augmented.yaml  stage2_vae.yaml  stage3_advanced.yaml  stage3_vae_gan.yaml
docs/: HOW_TO_GENERATE.md  HOW_TO_TRAIN.md  SCRIPT_ORGANIZATION.md  TRAINING_GUIDE.md  architecture.md  architecture_diagram.html
docs/phase 5_notes/: DIAGNOSIS_REPORT.md  GENERATION_EXAMPLES.md  HOW_TO_GENERATE.md  PHASE_5_IMPLEMENTATION_PLAN.md  PROGRESSIVE_TRAINING_GUIDE.md
docs/phase_2_notes/: PHASE_2_ASSESSMENT.md
docs/phase_3_notes/: INTEGRATION_AUDIT_FINDINGS.md  INTEGRATION_FIXES_APPLIED.md  PHASE_3_2_ASSESSMENT.md  PHASE_3_2_VAE_PLAN.md  PHASE_3_3_ASSESSMENT.md  PHASE_3_4_ASSESSMENT.md  PHASE_3_COMPLETE_ASSESSMENT.md
docs/phase_4_notes/: PHASE_4_1_POST_AUDIT.md  PHASE_4_2_CROSS_OFF_SUMMARY.md  PHASE_4_4_EARLY_STOPPING_REGULARIZATION.md  PHASE_4_5_COMPLETION.md  PHASE_4_COMPREHENSIVE_ASSESSMENT.md  (+3 more)
scripts/: README.md  analyze_sequence_lengths.py  calculate_vocab_size.py  create_combined_dashboard.py
src/: __init__.py
src/data/: dataset.py  (+7 more)
tests/: README.md  conftest.py  deep_inplace_debug.py  quick_training_test.py  test_end_to_end_pipeline.py  test_enhanced_cache_system.py  test_enhanced_grammar_training.py  test_enhanced_vae.py  test_gan_components.py  test_progress_bars.py  test_progressive_training.py  test_train.py  train_simple.py
(+232 files in other folders)
